fixed the rendering problem where it was a problem of the speeed of the CDN. Now that the files are served locally, it works fine, and an initial show/hide means that you dont see the flicker as the styles are applied

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,4 +132,13 @@ nav {
   .tooltip:hover .tooltiptext {
     visibility: visible;
   }
+
+
+.komplett_metadata_tabell>tbody>tr>td, .komplett_metadata_tabell>tbody>tr>th, .komplett_metadata_tabell>tfoot>tr>td, .komplett_metadata_tabell>tfoot>tr>th, .komplett_metadata_tabell>thead>tr>td, .komplett_metadata_tabell>thead>tr>th {
+    padding: 2px;
+}
+
+#kodtext_tabell {
+  display: none;
+}
   
